--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,6 +29,7 @@
     --color-border-light: rgba(130, 143, 163, 0.25);
     --color-on-primary: var(--white);
     --color-hover-background: rgba(99, 95, 199, 0.1);
+    --color-hover-sidebar: rgba(99, 95, 199, 0.1);
     --color-primary-opacity-10: rgba(99, 95, 199, 0.1);
     --color-primary-opacity-25: rgba(99, 95, 199, 0.25);
     --color-placeholder: rgba(0,0,0,.5);
@@ -62,6 +63,7 @@
     --color-border-light: rgba(130, 143, 163, 0.25);
     --color-on-primary: var(--white);
     --color-hover-background: rgba(99, 95, 199, 0.2);
+    --color-hover-sidebar: var(--white);
     --color-primary-opacity-10: rgba(99, 95, 199, 0.1);
     --color-primary-opacity-25: rgba(99, 95, 199, 0.25);
     --color-placeholder: rgba(255,255,255,.5);
